Fixed visibility - https://github.com/Kademi/projects/issues/152

--- a/src/main/marketplace/apps/salesDataClaimer/common/theme/apps/salesDataClaimer/salesDataClaimer.css
+++ b/src/main/marketplace/apps/salesDataClaimer/common/theme/apps/salesDataClaimer/salesDataClaimer.css
@@ -46,3 +46,13 @@ span.summary-field:empty:before {content: "Not specified";color: gray;font-style
 span.compulsory-field {
     color: red;
 }
+
+.bsb-number-dashe{
+    position: absolute; top: -2px; left: 16%; font-size: 26px;   
+}
+
+@media (max-width: 767px) {
+    .bsb-number-dashe{
+        position: absolute; top: -2px; left: 49.2%; font-size: 26px;   
+    }
+}
